tdf#117636 sw: Ignore spurious language spans in DOC files

Some DOC files may contain large amounts of unnecessary CLid* entries,
indicating noop char locale changes. These entries don't affect document
meaning, but may cause significant performance problems when handled
naively.

This is a fairly straightforward change to ignore language runs when the
same language is already used for the font slot. Manual testing suggests
newer versions of Word also implement the same optimization, so this
should be safe.

Change-Id: Ia3f34d3485acd2ee67ae9c081c9045ea36cf3fa2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188569
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>